# ModernTerminal

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  savr_desktop.spec
backend/alembic/: env.py
backend/alembic/versions/: 69ee9a08e285_add_legacy_crypto_flag_to_hosts.py  742bf5e05b97_initial_folders_and_hosts.py
backend/app/: config.py  crud.py  crypto.py  db.py  desktop_app.py  main.py  models.py  schemas.py
backend/app/ai/: base.py  loop.py  ollama_provider.py  openai_compatible_provider.py  provider_factory.py  runtime_settings.py  safety.py  session_registry.py  tools.py
backend/app/connectors/: base.py  ssh_connector.py  telnet_connector.py
backend/app/routers/: agent_ws.py  ai_settings.py  folders.py  hosts.py  terminal_ws.py
backend/app/tests/: conftest.py  fake_ai_provider.py  fake_ollama_server.py  fake_openai_server.py  fake_websocket.py  ssh_test_server.py  telnet_test_server.py  test_agent_loop.py  test_agent_ws.py  test_ai_base.py  test_ai_settings.py  test_crypto.py  test_folders.py  test_hosts.py  test_ollama_provider.py  test_openai_compatible_provider.py  test_safety.py  test_ssh_connector_legacy_crypto.py  test_terminal_ws.py  test_terminal_ws_session_registry.py  test_terminal_ws_telnet.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/state/: SessionTreeContext.tsx  TabsContext.tsx  (+2 more)
scripts/: build_desktop.ps1  build_desktop.sh
training/: README.md
training/dataset/: README_DATASET.md  SCHEMA.md  example.jsonl
training/scripts/: convert_to_toolcalling.py  export_gguf.py  train_lora.py  validate_dataset.py
(+14 files in other folders)
